    WATO:
    * FIX: fixed detection of existing groups when creating new groups
    * FIX: allow email addresses like test@test.test-test.com

    Checks & Agents:
    * FIX: postgres_sessions: handle case of no active/no idle sessions

    Multisite:
    * FIX: performeter_temparature now returns unicode string, because of °C
    * FIX: output_format json in webservices now using " as quotes

1.2.0p3:
    Mulitisite:
    * Added "view" parameter to dashlet_pnpgraph webservice
    * FIX: BI: Assuming "OK" for hosts is now possible
    * FIX: Fixed error in makeuri() calls when no parameters in URL
    * FIX: Try out mode in view editor does not show context buttons anymore
    * FIX: WATO Folder filter not available when WATO disabled
    * FIX: WATO Folder Filter no longer available in single host views
    * FIX: Quicksearch converts search text to regex when accessing livestatus
    * FIX: Localize option for not OMD Environments
    * FIX: Fixed "access denied" problem with multisite authorization in PNP/NagVis
           in new OMD sites which use the multisite authorization

    WATO:
    * FIX: Users & Contacts uses case-insensitive sorting of 'Full name' column  
    * FIX: Removed focus of "Full name" attribute on editing a contact
    * FIX: fix layout bug in ValueSpec ListOfStrings (e.g. used in
           list of explicit host/services in rules)
    * FIX: fix inheritation of contactgroups from folder to hosts
    * FIX: fix sorting of users, fix lost user alias in some situations
    * FIX: Sites not using distritubed WATO now being skipped when determining
           the prefered peer
    * FIX: Updating internal variables after moving hosts correctly
      (fixes problems with hosts tree processed in hooks)

    BI:
    * FIX: Correct representation of (!), (!!) and (?) markers in check output

    Livestatus:
    * FIX: check_icmp: fixed calculation of remaining length of output buffer