@@ -10,6 +10,9 @@
     * FIX: performeter_temparature now returns unicode string, because of °C
     * FIX: output_format json in webservices now using " as quotes
 
+    Livestatus:
+    * FIX: fix two problems when reloading module in Icinga (thanks to Ronny Biering)
+
 1.2.0p3:
     Mulitisite:
     * Added "view" parameter to dashlet_pnpgraph webservice
